--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -64,8 +64,8 @@ pipeline{
 			steps{
 				container('helm'){
 					sh 	'''#!/bin/sh
-							./helm init --client-only
-							./helm upgrade $APPNAME ibmcloud/charts/calculadora-api --install --set db.dbname=TEST,db.password=passw0rd,api.image.repository=$APIIMAGE,api.image.tag=$TAG,db.image.repository=$DBIMAGE,db.image.tag=$TAG
+							/helm init --client-only
+							/helm upgrade $APPNAME ibmcloud/charts/calculadora-api --install --set db.dbname=TEST,db.password=passw0rd,api.image.repository=$APIIMAGE,api.image.tag=$TAG,db.image.repository=$DBIMAGE,db.image.tag=$TAG
 							'''
 				}
 			}
