Updating Jenkinsfile for IBM Cloud

--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -65,7 +65,7 @@ pipeline{
 				container('helm'){
 					sh 	'''#!/bin/sh
 							/helm init --client-only
-							/helm upgrade $APPNAME ibmcloud/charts/calculadora-api --install --set db.dbname=TEST,db.password=passw0rd,api.image.repository=$APIIMAGE,api.image.tag=$TAG,db.image.repository=$DBIMAGE,db.image.tag=$TAG
+							/helm upgrade $APPNAME ibmcloud/charts/calculadora-api --namespace default --install --set db.dbname=TEST,db.password=passw0rd,api.image.repository=$APIIMAGE,api.image.tag=$TAG,db.image.repository=$DBIMAGE,db.image.tag=$TAG
 							'''
 				}
 			}
