--- a/ibmcloud/BuildPod.yaml
+++ b/ibmcloud/BuildPod.yaml
@@ -30,6 +30,14 @@ spec:
     volumeMounts:
     - name: docker-credentials
       mountPath: /kaniko/.docker
+  - name: maven
+    image: maven:3.6.3-jdk-8
+    command: 
+    - "/bin/bash"
+    - "-c"
+    args: 
+    - cat
+    tty: true
   - name: ace
     image: ibmcom/ace
     command: 
