--- a/ibmcloud/charts/calculadora-api/templates/db-service.yaml
+++ b/ibmcloud/charts/calculadora-api/templates/db-service.yaml
@@ -7,21 +7,12 @@ metadata:
 spec:
   type: {{ default "ClusterIP" .Values.db.service.type }}
   ports:
-    - port: 22
+    {{- range .Values.db.service.ports }}
+    - name: {{ .name }}
+      targetPort: {{ .name }}
+      port: {{ .port }}
       protocol: TCP
-      name: 22-tcp
-    - port: 50000
-      protocol: TCP
-      name: 50000-tcp
-    - port: 55000
-      protocol: TCP
-      name: 55000-tcp
-    - port: 60006
-      protocol: TCP
-      name: 60006-tcp
-    - port: 60007
-      protocol: TCP
-      name: 60007-tcp
+    {{- end }}
   selector:
     app.kubernetes.io/name: {{ include "calculadora-api.name" . }}-db
     app.kubernetes.io/instance: {{ .Release.Name }}
