Test on google cloud.

--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline{
 					sh  '''#!/busybox/sh
 							echo "Building $DESTINATION"
 							echo '/kaniko/executor --dockerfile=Dockerfile --context="dir://`pwd`" --destination="$DESTINATION"'
-							/kaniko/executor --dockerfile=Dockerfile --context="dir://`pwd`" --destination="$DESTINATION" --debug
+							/kaniko/executor --dockerfile=Dockerfile --context="dir://`pwd`" --destination="$DESTINATION" --verbosity debug
 							'''
 				}
 			}
